--- a/static/index.html
+++ b/static/index.html
@@ -249,7 +249,7 @@
             transposeBtn.disabled = true;
 
             try {
-                const response = await fetch('/transpose', {
+                const response = await fetch('https://music-transposer.onrender.com/transpose', {
                     method: 'POST',
                     body: formData
                 });
